refactor(xmla): split the connector by rowset family, and make clients accept it
Four bundles instead of one - relational, relational.oledb, multidimensional and
the core - with connector.embedded holding the tests that need all of them. A
deployment picks what it serves and DISCOVER_SCHEMA_ROWSETS announces only that,
generated from the whiteboard's registrations and the model rather than
maintained by hand.

With the corrections a client needs to get past connecting: COMPATIBILITY_LEVEL
and TYPE in every DBSCHEMA_CATALOGS row, the Server element as the root of
DISCOVER_XML_METADATA where only a restriction picks the object,
ObjectExpansion as [MS-SSAS] defines it, and DataSourceInfo carrying the
instance name. A server with no catalog no longer throws, a catalog name is
matched ignoring case, and DBSCHEMA_CATALOGS lists only catalogs the caller may
open. MDSCHEMA_INPUT_DATASOURCES is served; the MDX capability masks are stated
against the specification and overridable per deployment.

Signed-off-by: Stefan Bischof <stbischof@bipolis.org>